k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-backend
  template:
    metadata:
      labels:
        app: music-backend
    spec:
      containers:
      - name: music-backend
        image: music_backend:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: music-backend-svc
spec:
  selector:
    app: music-backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
