k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-frontend
  template:
    metadata:
      labels:
        app: music-frontend
    spec:
      containers:
      - name: music-frontend
        image: music_frontend:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: music-frontend-svc
spec:
  selector:
    app: music-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
