k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: music-frontend-svc, port: { number: 80 } }
      - path: /api
        pathType: Prefix
        backend:
          service: { name: music-backend-svc, port: { number: 8080 } }
